@@ -4,17 +4,16 @@
 
 #include <gtest/gtest.h>
 
-#include "gtesthelper.h"
+#include "gtesthelp.h"
 
 using namespace ra;
 
 int main(int argc, char **argv)
 {
   //define default values for xml output report
-  gTestHelper & hlp = gTestHelper::getInstance();
   std::string outputXml = "xml:" "rapidassist_unittest";
-  outputXml += (hlp.isProcessorX86() ? ".x86" : ".x64");
-  outputXml += (hlp.isDebugCode() ? ".debug" : ".release");
+  outputXml += (ra::gtesthelp::isProcessorX86() ? ".x86" : ".x64");
+  outputXml += (ra::gtesthelp::isDebugCode() ? ".debug" : ".release");
   outputXml += ".xml";
   ::testing::GTEST_FLAG(output) = outputXml;
 
@@ -22,10 +21,10 @@ int main(int argc, char **argv)
   ::testing::InitGoogleTest(&argc, argv);
 
   //Disable TestTime.testGetUtcTime() on AppVeyor or Travis CI
-  if (hlp.isAppVeyor() || hlp.isTravis())
+  if (ra::gtesthelp::isAppVeyor() || ra::gtesthelp::isTravis())
   {
     //AppVeyor and Travis CI runs in timezone +0 which is not expected by the test.
-    std::string newFilter = hlp.mergeFilter("", "TestTime.testGetUtcTime", ::testing::GTEST_FLAG(filter).c_str());
+    std::string newFilter = ra::gtesthelp::mergeFilter("", "TestTime.testGetUtcTime", ::testing::GTEST_FLAG(filter).c_str());
     ::testing::GTEST_FLAG(filter) = newFilter;
   }
 
