@@ -1,6 +1,7 @@
 Changes for 0.3.0:
 
 * New microseconds and milliseconds timers.
+* Moved all methods of class gTestHelper to ra::gtesthelp namespace.
 
 Changes for 0.2.0:
 
